[gd_scene load_steps=2 format=3 uid="uid://training_result_popup"]

[ext_resource type="Script" path="res://scripts/ui/TrainingResultPopup.gd" id="1_script"]

[node name="TrainingResultPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_script")

[node name="BackgroundDim" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
theme_override_styles/panel = null

[node name="PanelBG" type="ColorRect" parent="CenterContainer/Panel"]
layout_mode = 2
color = Color(0.086, 0.106, 0.133, 1)

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MarginTop" type="Control" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.137, 0.525, 0.212, 1)
theme_override_font_sizes/font_size = 28
text = "훈련 완료!"
horizontal_alignment = 1

[node name="TrainingNameLabel" type="Label" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.545, 0.58, 0.62, 1)
theme_override_font_sizes/font_size = 18
text = "슈팅 훈련"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="ChangesLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.902, 0.929, 0.953, 1)
theme_override_font_sizes/font_size = 16
text = "능력치 변화"
horizontal_alignment = 1

[node name="ChangesContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 120)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="TotalLabel" type="Label" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.902, 0.929, 0.953, 1)
theme_override_font_sizes/font_size = 16
text = "총 변화: +5 | 컨디션 -8%"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "확인"

[node name="MarginBottom" type="Control" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
